Fix spacing around return link #422.

--- a/themes/custom/ts_wrin/sass/global/_header.scss
+++ b/themes/custom/ts_wrin/sass/global/_header.scss
@@ -764,7 +764,3 @@ header nav.menu--donate > ul.menu {
     }
   }
 }
-
-.event_backlink {
-  padding-top: $space-sm;
-}
